name:                promissory-note-types
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/runeksvendsen/promissory-note-types#readme
license:             BSD3
license-file:        LICENSE
author:              Rune K. Svendsen
maintainer:          runesvend@gmail.com
copyright:           2016 Rune K. Svendsen
category:            Finance Network Bitcoin
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  build-depends:       base >= 4.7 && < 5
                     , cereal
                     , aeson
                     , hashable
                     , cryptohash-sha256
                     , time
                     , haskoin-core
                     , bytestring
                     , base16-bytestring
                     , text
                     , string-conversions

  exposed-modules:     PromissoryNote
                       PromissoryNote.Note
                       PromissoryNote.StoredNote
                       PromissoryNote.Redeem
                       PromissoryNote.Types


  other-modules:       PromissoryNote.Types.UUID
                       PromissoryNote.Types.Crypto
                       PromissoryNote.Types.Misc



source-repository head
  type:     git
  location: https://github.com/runeksvendsen/promissory-note-types
