name:                promissory-note-types
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/runeksvendsen/promissory-note-types#readme
license:             BSD3
license-file:        LICENSE
author:              Rune K. Svendsen
maintainer:          runesvend@gmail.com
copyright:           2016 Rune K. Svendsen
category:            Finance Network Bitcoin
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/runeksvendsen/promissory-note-types


library
  hs-source-dirs:      src
  default-language:    Haskell2010

  build-depends:       base >= 4.7 && < 5
                     , cereal
                     , aeson
                     , hashable
                     , cryptohash-sha256
                     , time
                     , haskoin-core
                     , bitcoin-payment-channel
                     , bytestring
                     , base16-bytestring
                     , text
                     , string-conversions
                     , QuickCheck, quickcheck-text, bytestring-arbitrary

  exposed-modules:     PromissoryNote
                       PromissoryNote.Note
                       PromissoryNote.StoredNote
                       PromissoryNote.Redeem
                       PromissoryNote.Types
                       PromissoryNote.Test


  other-modules:       PromissoryNote.Types.UUID
                       PromissoryNote.Types.Crypto
                       PromissoryNote.Types.Misc

test-suite test-bitcoin-payment-channel
  type: exitcode-stdio-1.0
  main-is: PromissoryNote/Test/Main.hs
  default-language:     Haskell2010
  hs-source-dirs: src
  ghc-options:    -Wall -main-is PromissoryNote.Test.Main

  build-depends:       base >= 4.7 && < 5
                       , cereal
                       , aeson
                       , hashable
                       , cryptohash-sha256
                       , time
                       , haskoin-core
                       , bitcoin-payment-channel
                       , bytestring
                       , base16-bytestring
                       , text
                       , string-conversions
                       , QuickCheck, quickcheck-text, bytestring-arbitrary


